# mingen

./: CMakeLists.txt  TODO.txt
include/: alias.h  ball.h  chunk.h  comp.h  def.h  defs.h  enum.h  fn.h  macro.h  mingen.h  type.h
lib/GLAD/: glad.c  glad.h
src/: array.c  ball.c  camera.c  chunk.c  collection.c  data.c  free.c  game.c  graphics.c  grid.c  hash.c  input.c  list.c  loop.c  main.c  map.c  mesh.c  mingen.c  mingen.h  network.c  sound.c  table.c  utility.c
src/_/: comp.h  defs.h  enum.h  fn.h
src/array/: array.c  array.h
src/chunk/: chunk.c  chunk.h
src/collection/: collection.c  collection.h
src/data/: data.c  data.h
src/game/: game.c  game.h
src/graphics/: graphics.c  graphics.h
src/input/: input.c  input.h
src/loop/: loop.c  loop.h
src/map/: map.c  map.h
src/mesh/: mesh.c  mesh.h
src/network/: network.c  network.h
src/shader/: vertex.shader
src/shape/: cube.c  ramp.c  solid.c
src/shapes/: shapes.c  shapes.h
src/shapes/ramp/: ramp.c  ramp.h
src/shapes/solid/: solid.c  solid.h
src/sound/: sound.c  sound.h
src/utility/: utility.c  utility.h
